# Computer_Network_Remote_Desktop_Application

./: CMakeLists.txt  Makefile  README.md  all.txt  client.html  main.cpp
src/: test.cpp
src/core/: CommandDispatcher.hpp
src/modules/: AppManager.hpp  AppManager_linux.cpp  AppManager_win.cpp  AppManger_linux.cpp  FileManager.hpp  FileManager_linux.cpp  FileManager_win.cpp  InputManager.hpp  InputManager_linux.cpp  InputManager_win.cpp  KeyManager.hpp  KeyManager_linux.cpp  KeyManager_win.cpp  ProcessManager.hpp  ProcessManager_linux.cpp  ProcessManager_win.cpp  ScreenManager.hpp  ScreenManager_linux.cpp  ScreenManager_win.cpp  WebcamManager.hpp  WebcamManager_linux.cpp  WebcamManager_win.cpp
web-client/: package-lock.json
web-client/src/app/pages/about/: about.css  about.html  about.ts
web-client/src/app/pages/agent-detail/: agent-detail.css  agent-detail.html  agent-detail.ts
web-client/src/app/pages/agents/: agents.css
web-client/src/app/services/: websocket.service.ts
